# ray-tracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/RayTracer/: AABB.hpp  BVH.hpp  Camera.h  Camera.hpp  DirectionalLight.h  DirectionalLight.hpp  Geometry.h  Geometry.hpp  Light.h  Light.hpp  LocalGeometry.hpp  Material.h  Mesh.h  Mesh.hpp  PointLight.h  PointLight.hpp  Primitive.hpp  Ray.h  Ray.hpp  RayHit.hpp  Renderer.h  Renderer.hpp  Sampler.hpp  Scene.h  Scene.hpp  Sphere.h  Sphere.hpp  Triangle.hpp
include/RayTracer/geometries/: Geometry.hpp  LocalGeometry.hpp  Mesh.hpp  Sphere.hpp  Triangle.hpp
include/RayTracer/lights/: DirectionalLight.hpp  PointLight.hpp
include/RayTracer/shapes/: LocalShape.hpp  Mesh.hpp  Shape.hpp  Sphere.hpp  Triangle.hpp
include/raytracer/: AABB.hpp  BVH.hpp  Camera.hpp  ImageWriter.hpp  Integrator.hpp  Material.hpp  Primitive.hpp  PrimitiveGroup.hpp  Ray.hpp  RayHit.hpp  Sampler.hpp  Scene.hpp  aabb.hpp  bvh.hpp  camera.hpp  image.hpp  material.hpp  ray.hpp  scene.hpp
include/raytracer/integrators/: AnalyticDirectIntegrator.hpp  DirectIntegrator.hpp  Integrator.hpp  NormalIntegrator.hpp  SimpleIntegrator.hpp  integrator.hpp  (+5 more)
src/: AABB.cpp  AnalyticDirectIntegrator.cpp  BVH.cpp  CMakeLists.txt  Camera.cpp  CenterSampler.cpp  DirectIntegrator.cpp  DirectionalLight.cpp  Geometry.cpp  Image.cpp  ImageWriter.cpp  Integrator.cpp  Light.cpp  LightSample.cpp  LocalGeometry.cpp  LocalShape.cpp  Material.cpp  Mesh.cpp  NormalIntegrator.cpp  PointLight.cpp  Primitive.cpp  PrimitiveGroup.cpp  QuadLight.cpp  RayHit.cpp  Renderer.cpp  Sampler.cpp  Scene.cpp  SimpleIntegrator.cpp  Sphere.cpp  Triangle.cpp  aabb.cpp  aabb.hpp  analytic_direct_integrator.cpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  direct_integrator.cpp  geometry.hpp  hemisphere_sampler.cpp  (+21 more)
src/integrators/: analytic_direct_integrator.cpp  analytic_direct_integrator.hpp  direct_integrator.hpp  direct_integrator.inc  integrator.cpp  integrator.hpp  normal_integrator.hpp  path_integrator.hpp  path_integrator.inc  path_tracer.cpp  path_tracer.hpp  path_tracer.inc  volume_path_integrator.hpp
src/lights/: light.hpp  quad_light.cpp  quad_light.hpp
src/materials/: BSSRDF.hpp  bsdf.hpp  bssrdf.cpp  bssrdf.hpp  composed_bsdf.hpp  composed_material.hpp  ggx.cpp  ggx.hpp  lambertian.hpp  material.hpp  material_ref.hpp  phong.hpp  subsurface_material.hpp
src/samplers/: cosine_sampler.hpp  hemisphere_sampler.hpp  independent_multisampler.hpp  multisampler.hpp  phong_sampler.hpp  sampler.hpp  sampling.hpp  square_sampler.hpp  stratified_multisampler.hpp
src/shapes/: aabb.hpp  bvh.cpp  bvh.hpp  local_info.hpp  local_shape.cpp  local_shape.hpp  ray_hit.hpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
tests/: CMakeLists.txt
tests/cse168/: CMakeLists.txt  main.cpp
tests/hello/: CMakeLists.txt  main.cpp
tests/hw1/: CMakeLists.txt  main.cpp
(+46 files in other folders)
